--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "version": "1.0.0",
     "description": "",
     "scripts": {
-        "start": "http-server -o /index.html"
+        "start": "live-server --open=/index.html"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "http-server": "^0.12.0"
+        "live-server": "^1.2.1"
     }
 }
