--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "scripts": {
-        "start": "live-server --open=/index.html"
+        "start": "live-server --open=/src/index.html"
     },
     "author": "",
     "license": "ISC",
